Set URL to www.yakhyadabo.org

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	<p>By <a href="http://wwww.yakhya.org">Yakhya Dabo</p>
+	<p>By <a href="http://www.yakhyadabo.org">Yakhya Dabo</p>
 </footer>
